--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@scure/bip32": "^1.3.2",
     "@scure/bip39": "^1.2.1",
     "@zk-kit/incremental-merkle-tree": "^1.1.0",
+    "axios": "^1.5.1",
+    "axios-retry": "^3.8.0",
     "bigint-conversion": "^2.4.2",
-    "bignumber.js": "^9.1.2",
     "commander": "^11.0.0",
-    "cross-fetch": "^4.0.0",
     "express": "^4.18.2",
     "merkletreejs": "^0.3.10",
     "nedb": "^1.8.0",
