--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bigint-conversion": "^2.4.2",
     "commander": "^11.0.0",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "merkletreejs": "^0.3.10",
     "nedb": "^1.8.0",
     "readline-sync": "^1.4.10"
