--- a/package.json
+++ b/package.json
@@ -9,30 +9,33 @@
   "scripts": {
     "prod": "node app/web.mjs",
     "dev": "nodemon app/web.mjs",
-    "test": "npx mocha",
-    "cli": "node app/cli.mjs"
+    "test": "mocha",
+    "cli": "node app/cli.mjs",
+    "coverage": "c8 npm run test"
   },
   "author": "Thierry Sans",
   "license": "ISC",
   "devDependencies": {
+    "c8": "^8.0.1",
     "chai": "^4.3.8",
     "chai-http": "^4.4.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "@noble/ciphers": "^0.3.0",
     "@noble/hashes": "^1.3.2",
     "@scure/bip32": "^1.3.2",
     "@scure/bip39": "^1.2.1",
-    "@zk-kit/incremental-merkle-tree": "^1.1.0",
-    "axios": "^1.5.1",
-    "axios-retry": "^3.8.0",
-    "bigint-conversion": "^2.4.2",
+    "@seald-io/nedb": "^4.0.4",
+    "async-lock": "^1.4.0",
+    "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
     "commander": "^11.0.0",
-    "express": "^4.18.2",
+    "crypto-js": "^4.2.0",
+    "express": "^4.21.2",
     "joi": "^17.11.0",
-    "merkletreejs": "^0.3.10",
-    "nedb": "^1.8.0",
+    "merkletreejs": "^0.4.1",
     "readline-sync": "^1.4.10"
   }
 }
